crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/empty_column_families@testnet_1.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: empty_column_families
---
[
  "header_aux_delivery_v1: no entries",
  "header_body_evidence_authority_v1: no entries",
  "header_child_v1: no entries",
  "header_consensus_invalid_tombstone_v1: no entries",
  "header_deferred_v1: no entries",
  "header_eligibility_root_v1: no entries",
  "header_engine_meta_v1: no entries",
  "header_finality_history_v1: no entries",
  "header_node_by_hash_v1: no entries",
  "header_selected_v1: no entries",
  "header_validation_context_v1: no entries",
  "header_verified_v1: no entries",
  "history_tree: no entries",
  "ironwood_note_commitment_subtree: no entries",
  "ironwood_nullifiers: no entries",
  "orchard_note_commitment_subtree: no entries",
  "orchard_nullifiers: no entries",
  "pruning_metadata: no entries",
  "sapling_note_commitment_subtree: no entries",
  "sapling_nullifiers: no entries",
  "sprout_nullifiers: no entries",
  "tx_loc_by_spent_out_loc: no entries",
  "vct_sync_metadata: no entries",
  "zakura_header_body_size_by_height: no entries",
  "zakura_header_by_height: no entries",
  "zakura_header_hash_by_height: no entries",
  "zakura_header_height_by_hash: no entries",
]
