crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/empty_column_families_tachyon@mainnet_0.snap
---
source: crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: empty_column_families
---
[
  "balance_by_transparent_addr: no entries",
  "header_aux_body_size_v1: no entries",
  "header_aux_delivery_v1: no entries",
  "header_body_evidence_authority_v1: no entries",
  "header_child_v1: no entries",
  "header_consensus_invalid_tombstone_v1: no entries",
  "header_deferred_v1: no entries",
  "header_eligibility_root_v1: no entries",
  "header_engine_meta_v1: no entries",
  "header_finality_history_v1: no entries",
  "header_finality_witness_v1: no entries",
  "header_node_by_hash_v1: no entries",
  "header_selected_v1: no entries",
  "header_validation_context_v1: no entries",
  "header_verified_v1: no entries",
  "history_tree: no entries",
  "ironwood_note_commitment_subtree: no entries",
  "ironwood_nullifiers: no entries",
  "orchard_note_commitment_subtree: no entries",
  "orchard_nullifiers: no entries",
  "pruning_metadata: no entries",
  "sapling_note_commitment_subtree: no entries",
  "sapling_nullifiers: no entries",
  "sprout_nullifiers: no entries",
  "tachyon_anchor_by_height: no entries",
  "tachyon_anchors: no entries",
  "tachyon_epoch_anchor_by_epoch: no entries",
  "tachyon_tachygrams: no entries",
  "tx_loc_by_spent_out_loc: no entries",
  "tx_loc_by_transparent_addr_loc: no entries",
  "utxo_by_out_loc: no entries",
  "utxo_loc_by_transparent_addr_loc: no entries",
  "vct_sync_metadata: no entries",
  "zakura_header_body_size_by_height: no entries",
  "zakura_header_by_height: no entries",
  "zakura_header_hash_by_height: no entries",
  "zakura_header_height_by_hash: no entries",
]
